--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+.idea
+.idea/*
+.idea/libraries
+.idea/.name
+.idea/workspace.xml
+/.idea/workspace.xml
+target/
+target/generated-sources/
+target/generated-test-sources/
+target/test-classes
+target/site
+*.log
+*.iml
+*.ipr
+*.iws
+*/src/main/java/resources/hiddenConfig.properties
+hiddenConfig.properties
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
