third test LoginPage

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,5 @@
-base_url=https://www.underarmour.com/en-us/
+base_url=https://www.underarmour.com/
+login_url=https://login.shop.underarmour.com/
 TIME_FOR_IMPLICIT_WAIT=5
 TIME_FOR_DEFAULT_WAIT=15
 TIME_FOR_EXPLICIT_WAIT_LOW=10
